
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {int isResizing; } ;
struct TYPE_5__ {TYPE_3__* panels; } ;
typedef TYPE_1__ RCore ;


 int __panel_all_clear (TYPE_3__*) ;
 int __panels_layout_refresh (TYPE_1__*) ;

void __do_panels_refresh(RCore *core) {
 if (!core->panels) {
  return;
 }
 core->panels->isResizing = 1;
 __panel_all_clear (core->panels);
 __panels_layout_refresh (core);
}
